Fixes loading spinner visibility on Safari.

--- a/src/scss/10-deprecated/_button-loading-deprecated.scss
+++ b/src/scss/10-deprecated/_button-loading-deprecated.scss
@@ -5,13 +5,16 @@ button.OSFillParent {
 	display: inline-flex;
 }
 
-.is--loading .btn {
-	&,
-	& * {
-		pointer-events: none;
-	}
+.is--loading {
+	position: relative;
+	.btn {
+		&,
+		& * {
+			pointer-events: none;
+		}
 
-	display: inline-block;
+		display: inline-block;
+	}
 }
 
 .btn-loading {
